--- a/style.css
+++ b/style.css
@@ -270,6 +270,21 @@ body {
     max-height: 100vh;
     z-index: 99;
 }
+
+#page77{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    background-color: #EFE6DA;
+}
+
+#page77>canvas{
+    position: relative;
+    max-width: 100vw;
+    max-height: 100vh;
+    z-index: 99;
+}
+
 #page8{
     position: relative;
     height: 100vh;
