--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ body {
     position: relative;
     height: 70vh;
     width: 100vw;
-    background-color: ##EFE6DA;
+    background-color: #EFE6DA;
 }
 
 #page77h>h1{
